implementação de funcionalidades: cadastramento de endereços e obtenção de endereços através do ID
